--- a/modules/org.eclipselabs.reprotool.product/pom.xml
+++ b/modules/org.eclipselabs.reprotool.product/pom.xml
@@ -18,6 +18,15 @@
 	</properties>
 	<build>
 		<plugins>
+			<!-- adds all transitive dependencies -->
+			<plugin>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>tycho-p2-repository-plugin</artifactId>
+				<version>${tycho-version}</version>
+				<configuration>
+					<includeAllDependencies>true</includeAllDependencies>
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
 				<artifactId>tycho-p2-director-plugin</artifactId>
